--- a/css/user_view.css
+++ b/css/user_view.css
@@ -580,10 +580,6 @@
   margin-right: 5px;
 }
 
-#view_mode {
-  display: none;
-}
-
 /************************************************************/
 .user_drop_down {
   display: flex;
@@ -962,7 +958,7 @@
   border-right: none;
 }
 
-#sakagura_table .spec_item:nth-child(3) {
+#sakagura_table .spec_item:nth-child(3), #users_table .spec_item:nth-child(3) {
   border-right: none;
 }
 
@@ -1078,94 +1074,6 @@
 }
 
 /************************************************************/
-.dialog_new_like_container {
-  display: flex;
-  flex-wrap: nowrap;
-  flex-direction: row;
-  justify-content: flex-start;
-  align-items: center;
-  width: 100%;
-  height: auto;
-  margin-top: 8px;
-  border-top: 1px dotted #d2d2d2;
-}
-
-.dialog_new_like {
-  display: flex;
-  flex-wrap: nowrap;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
-  background: #e6e6e6;
-  color: #3f3f3f;
-  font-size: 12px;
-  height: 24px;
-  border-radius: 4px;
-  padding: 0 10px;
-  margin-top: 8px;
-  cursor: pointer;
-}
-
-.dialog_new_like_title {
-  font-weight: bold;
-}
-
-.dialog_new_like:hover {
-  color: #ffffff;
-  background: #FF4545;
-}
-
-.dialog_new_like_icon {
-  fill: #8c8c8c;
-  width: 14px;
-  height: 14px;
-  margin-right: 5px;
-}
-
-.dialog_new_like:hover .dialog_new_like_icon {
-  fill: #ffffff;
-}
-
-.dialog_new_like_count {
-  display: flex;
-  flex-wrap: nowrap;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
-  position: relative;
-  background: #e6e6e6;
-  color: #8c8c8c;
-  font-size: 12px;
-  width: 60px;
-  height: 24px;
-  border-radius: 4px;
-  border: 1px solid #e6e6e6;
-  margin-top: 8px;
-  margin-left: 8px;
-}
-
-.dialog_new_like_count:before, .dialog_new_like_count:after {
-  position: absolute;
-  right: 100%;
-  content: ' ';
-  width: 0;
-  height: 0;
-  border: solid transparent;
-}
-
-.dialog_new_like_count:before {
-  border-width: 6px;
-  border-right-color: #e6e6e6;
-  top: 5px;
-}
-
-.dialog_new_like_count:after {
-  border-width: 4px;
-  border-right-color: #e6e6e6;
-  top: 7px;
-}
-
-/************************************************************/
 #sake_table, #sakagura_table, #users_table {
   width: 100%;
   margin-top: 8px;
@@ -1242,10 +1150,8 @@
   cursor: pointer;
 }
 
-/************************************************************/
-.user_sake_brewery_container {
-  overflow: auto;
-  border-bottom: 1px dotted #d2d2d2;
+.pageitems:hover {
+  opacity: 0.5;
 }
 
 /************************************************************/
@@ -1285,11 +1191,6 @@
 }
 
 /************************************************************/
-#search_general_result, #search_sake_result, #search_sakagura_result {
-  width: 100%;
-  margin-top: 4px;
-}
-
 .searchRow_link, .sakaguraRow_link, .syuhantenRow_link, .usersRow_link  {
   display: flex;
   flex-wrap: nowrap;
@@ -1346,15 +1247,6 @@
   height: 100%;
 }
 
-.search_result_name_container {
-  display: flex;
-  flex-wrap: nowrap;
-  flex-direction: row;
-  justify-content: flex-start;
-  align-items: flex-start;
-  width: 100%;
-}
-
 .search_result_sake_image {
   overflow: hidden;
   width: 70px;
@@ -1401,100 +1293,6 @@
 }
 
 /************************************************************/
-.edittable {
-	overflow:auto;
-	border:1px solid #404040;
-	color:#fff;
-	font-size:14px;
-}
-
-.row {
-	overflow:auto;
-	padding-top:6px;
-	padding-bottom:6px;
-
-	//border-left:1px solid #626262;
-	//border-right:1px solid #626262;
-	border-bottom:1px solid #626262;
-	//border-top:1px solid #626262;
-}
-
-.column1 {
-	overflow:auto;
-	width:200px;
-	padding-left:2px;
-	padding-right:2px;
-}
-
-.column2 {
-	overflow:auto;
-	padding-left:2px;
-	padding-right:2px;
-}
-
-/*.review_container {
-	overflow:auto;
-	border:0px solid #ffc6c6;
-
-    display: flex;
-    flex-wrap: wrap;
-    flex-direction: row;
-    //justify-content: center;
-    justify-content: space-between;
-    align-items: center;
-}*/
-
-/*.review_container:after {
-  content: "";
-  flex: auto;
-}*/
-
-#loading {
-	border:1px solid #e3e3e3;
-	margin-left:4px;
-	padding:2px;
-	position: relative;
-	background-color:#FFF;
-	filter: alpha(opacity=85);
-	-moz-opacity:0.85;
-	opacity:0.85;
-	visibility: hidden;
-}
-
-#loading .loadingMsg{
-	text-align:center;
-	padding-right:28px;
-	position:relative;
-	width:60px;
-	background-image:url("../images/icons/load-gif.gif");
-	background-position: right top;
-	background-repeat: no-repeat;
-	color: #ff0000;
-}
-
-#loading_sakagura {
-	border:1px solid #e3e3e3;
-	margin-left:8px;
-	padding:4px;
-	position: relative;
-	background-color:#FFF;
-	filter: alpha(opacity=85);
-	-moz-opacity:0.85;
-	opacity:0.85;
-	visibility: hidden;
-}
-
-#loading_sakagura .loadingMsg{
-	text-align:center;
-	padding-right:28px;
-	position:relative;
-	width:60px;
-	background-image:url("images/icons/load-gif.gif");
-	background-position: right top;
-	background-repeat: no-repeat;
-	color: #ff0000;
-}
-
 #dialog_addimage {
 	position: fixed;
 	display: none;
@@ -1520,142 +1318,6 @@
 	background: rgba(31, 39, 53, 0.85);
 }
 
-#dialog_user {
-	position:fixed;
-	display:none;
-	width:96%;
-	height:468px;
-
-	top: 50%;
-	left: 50%;
-	margin-top: -234px; /* Negative half of height. */
-	margin-left: -48%;  /* Negative half of width. */
-
-	z-index:200;
-	background-color: #3F3F3F;
-	color:#fff;
-	padding:4px;
-	border-radius:4px;
-	font-size: 9pt;
-	opacity: .85;
-	filter: alpha(opacity = 50);
-	transition: all 0.5s linear;
-}
-
-.delete_nonda {
-    float:right;
-    background: #e3e3e3;
-    border: 1px solid #ccc;
-    color: #333;
-    font-size: 14px;
-    font-weight: bold;
-    padding: 0px 0 0px;
-    text-align: center;
-    height: 20px;
-    width: 100px;
-    cursor:pointer;
-    text-shadow: 0px 1px 0px #fff;
-    border-radius: 4px;
-    box-shadow: 0px 0px 2px #fff inset;
-    margin:2px;
-}
-
-.delete_nonda:hover {
-    background: #d9d9d9;
-    box-shadow: 0px 0px 2px #eaeaea inset;
-    color: #222;
-}
-
-.delete_nonda:active {
-    background: #136899;
-}
-
-.cancel_button {
-    float:right;
-    background: #e3e3e3;
-    border: 1px solid #ccc;
-    color: #333;
-    font-size: 14px;
-    font-weight: bold;
-    padding: 0px 0 0px;
-    text-align: center;
-    height: 20px;
-    width: 100px;
-    cursor:pointer;
-    text-shadow: 0px 1px 0px #fff;
-    border-radius: 4px;
-    box-shadow: 0px 0px 2px #fff inset;
-}
-
-.cancel_button:hover {
-    background: #d9d9d9;
-    box-shadow: 0px 0px 2px #eaeaea inset;
-    color: #222;
-}
-
-.cancel_button:active {
-    background: #136899;
-}
-
-.user_button {
-	overflow:hidden;
-    float:right;
-    color: #333;
-    font-size: 12px;
-    font-weight: bold;
-    padding: 2px 4px;
-    text-align: center;
-    cursor:pointer;
-    background: #e3e3e3;
-    margin:2px;
-    text-shadow: 0px 1px 0px #fff;
-    box-shadow: 0px 0px 2px #fff inset;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-}
-
-.user_button:hover {
-    background: #d9d9d9;
-    box-shadow: 0px 0px 2px #eaeaea inset;
-    color: #222;
-}
-
-.user_button:active {
-    background: #136899;
-}
-
-#syuhanten_table {
-	min-height:240px;
-	font-size: 12px;
-}
-
-#users_table {
-    font-size: 12px;
-}
-
-/*********************************************************/
-.customers {
-    border-collapse: collapse;
-    width: 100%;
-}
-
-.customers td, #customers th {
-    font-size: 13px;
-    border: 1px solid #bbb;
-    padding: 3px 7px 2px 7px;
-}
-
-.customers th {
-    color: #fff;
-    background-color: #505050;
-    text-align: left;
-}
-
-.customers tr.alt td {
-    color: #000000;
-    background-color: #c3c3c3;
-}
-
 /*********************************************************/
 .nondaview {
 	overflow:auto;
@@ -1666,16 +1328,6 @@
 }
 
 /*********************************************************/
-.search_result_turn_page {
-  display: flex;
-  flex-wrap: nowrap;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
-  margin-top: 15px;
-  font-size: 12px;
-}
-
 #prev_sakagura, #next_sakagura {
   display: flex;
   flex-wrap: nowrap;
@@ -1701,28 +1353,6 @@
 
 #next_review.active, #next_sakagura.active {
   color: #0740A5;
-}
-
-.pageitems {
-  display: flex;
-  flex-wrap: nowrap;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
-  background: #b2b2b2;
-  color: #ffffff;
-  font-size: 11px;
-  border: none;
-  outline: none;
-  width: 24px;
-  height: 24px;
-  margin: 0 4px;
-  border-radius: 2px;
-  cursor: pointer;
-}
-
-.pageitems:hover {
-  opacity: 0.5;
 }
 
 #ad1 {
@@ -1897,23 +1527,23 @@
 }
 
 @media only screen and (min-width: 1260px) {
-	#main_banner_container {
-		flex-direction: row;
-		justify-content: space-between;
-		align-items: flex-start;
-	}
+  #main_banner_container {
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: flex-start;
+  }
 
-	#container_wrapper {
-		width: 880px;
-	}
+  #container_wrapper {
+    width: 880px;
+  }
 
-	#banner {
-		width: 300px;
-		margin-top: 15px;
-	}
+  #banner {
+    width: 300px;
+    margin-top: 15px;
+  }
 
-	#ad1 {
-	  padding-top: 0;
-	  border-top: none;
-	}
+  #ad1 {
+    padding-top: 0;
+    border-top: none;
+  }
 }
