--- a/css/sda_view.css
+++ b/css/sda_view.css
@@ -1129,16 +1129,14 @@
 	left: 0;
 	display: none;
 	position: fixed;
-	background-color: #cccccc;
+  background-color: #ffffff;
 	color: #aaaaaa;
-	opacity: .5;
-	filter: alpha(opacity = 50);
+	opacity: .9;
+	filter: alpha(opacity = 90);
 }
 
 #inner_background {
 	display: flex;
-	flex-wrap: nowrap;
-	flex-direction: column;
 	justify-content: center;
 	align-items: center;
 	width: 100%;
@@ -1146,13 +1144,13 @@
 }
 
 .loader {
-	border: 16px solid #f3f3f3;
+  border: 2px solid #3498db;
 	border-radius: 50%;
-	border-top: 16px solid #3498db;
-	width: 120px;
-	height: 120px;
-	-webkit-animation: spin 2s linear infinite; /* Safari */
-	animation: spin 2s linear infinite;
+	border-top: 2px solid #ffffff;
+	width: 40px;
+	height: 40px;
+	-webkit-animation: spin 1s linear infinite; /* Safari */
+	animation: spin 1s linear infinite;
 }
 
 /* Safari */
