--- a/css/common.css
+++ b/css/common.css
@@ -1,4 +1,4 @@
-html, body, div, span, a, h1, h2, h3, h4, h5, h6, p, img, strong, var, dl, dt, dd, ol, ul, li, form, label, table, caption, thead, tr, th, td, article, aside, canvas, details, figcaption, figure, footer, header, menu, nav, section, summary, time, mark, audio, video {
+html, body, div, span, a, h1, h2, h3, h4, h5, h6, p, img, strong, var, dl, dt, dd, ol, ul, li, form, input, label, table, caption, thead, tr, th, td, article, aside, canvas, details, figcaption, figure, footer, header, menu, nav, section, summary, time, mark, audio, video {
   margin: 0;
   padding: 0;
   border: 0;
