--- a/css/user_view_config_profile.css
+++ b/css/user_view_config_profile.css
@@ -11,7 +11,6 @@
 
 #user_information {
 	display: flex;
-	flex-wrap: nowrap;
 	flex-direction: column;
 	justify-content: flex-start;
 	align-items: flex-start;
@@ -23,7 +22,6 @@
 
 #main_sub_container {
 	display: flex;
-	flex-wrap: nowrap;
 	flex-direction: column;
 	justify-content: flex-start;
 	align-items: center;
@@ -34,7 +32,6 @@
 
 #main_container {
 	display: flex;
-	flex-wrap: nowrap;
 	flex-direction: column;
 	justify-content: flex-start;
 	align-items: flex-start;
@@ -47,7 +44,6 @@
 
 #sub_container {
 	display: flex;
-	flex-wrap: nowrap;
 	flex-direction: column;
 	justify-content: flex-start;
 	align-items: center;
@@ -62,8 +58,6 @@
 /************************************************************/
 .user_image_name_container {
 	display: flex;
-	flex-wrap: nowrap;
-	flex-direction: row;
 	justify-content: flex-start;
 	align-items: flex-start;
 	width: 100%;
@@ -96,8 +90,6 @@
 /************************************************************/
 .mypage_config_title_button_container {
   display: flex;
-  flex-wrap: nowrap;
-  flex-direction: row;
   justify-content: space-between;
   align-items: center;
   width: 100%;
@@ -105,8 +97,6 @@
 
 .mypage_config_title {
   display: flex;
-  flex-wrap: nowrap;
-  flex-direction: row;
   justify-content: flex-start;
   align-items: center;
   color: #3f3f3f;
@@ -124,8 +114,6 @@
 
 .mypage_config_button {
   display: flex;
-  flex-wrap: nowrap;
-  flex-direction: row;
   justify-content: center;
   align-items: center;
   color: #3f3f3f;
@@ -138,8 +126,6 @@
 .mypage_config_button span {
   position: relative;
   display: flex;
-  flex-wrap: nowrap;
-  flex-direction: row;
   justify-content: flex-end;
   align-items: center;
   width: 126px;
@@ -165,7 +151,6 @@
 /************************************************************/
 #config_content {
   display: flex;
-  flex-wrap: nowrap;
   flex-direction: column;
   justify-content: flex-start;
   align-items: flex-start;
@@ -181,7 +166,6 @@
 
 .config_item {
   display: flex;
-  flex-wrap: nowrap;
   flex-direction: column;
   justify-content: flex-start;
   align-items: flex-start;
@@ -196,8 +180,6 @@
 
 .config_item_title {
   display: flex;
-  flex-wrap: nowrap;
-  flex-direction: row;
   justify-content: flex-start;
   align-items: center;
   width: 100%;
@@ -208,7 +190,6 @@
 /************************************************************/
 .profile_photo_container {
   display: flex;
-  flex-wrap: nowrap;
   flex-direction: column;
   justify-content: flex-start;
   align-items: center;
@@ -222,20 +203,16 @@
 .profile_photo {
   position: relative;
   display: flex;
-  flex-wrap: nowrap;
-  flex-direction: column;
   justify-content: center;
   align-items: center;
-  background: #ffffff;
-  width: 144px;
-  height: 144px;
+  width: 104px;
+  height: 104px
 }
 
 .profile_photo img {
   object-fit: cover;
-  background: #ffffff;
-  width: 144px;
-  height: 144px;
+  width: 104px;
+  height: 104px;
   image-orientation: from-image;
 }
 
@@ -248,8 +225,6 @@
 .profile_status_total_container {
   position: absolute;
   display: flex;
-  flex-wrap: nowrap;
-  flex-direction: row;
   justify-content: space-between;
   align-items: center;
   width: 60%;
@@ -266,44 +241,46 @@
 }
 
 .profile_photo_button_container {
+  position: absolute;
+  top: 0;
+  left: 0;
   display: flex;
-  flex-wrap: nowrap;
-  flex-direction: row;
-  justify-content: space-between;
+	flex-direction: column;
+  justify-content: space-around;
   align-items: center;
-  width: 100%;
-  margin-top: 8px;
+  background: rgba(0, 0, 0, 0.3);
+  width: 104px;
+  height: 104px;
+  padding: 16px 0;
+  border: 2px solid #d2d2d2;
 }
 
-.profile_photo_button_container input[type="button"] {
+.profile_photo_button_container .change_pic, .profile_photo_button_container .remove_profile_pic {
   display: flex;
-  flex-wrap: nowrap;
-  flex-direction: row;
   justify-content: center;
   align-items: center;
-  width: 64px;
-  height: 30px;
-  border-radius: 4px;
-  border: none;
+  background: none;
+  color: #ffffff;
+  font-size: 13px;
+  width: 48px;
+  height: 24px;
+  border-radius: 12px;
+  border: 2px solid #ffffff;
   outline: none;
   cursor: pointer;
 }
 
-.change_pic {
-  background: #32B4C8;
-  color: #ffffff;
-}
-
-.remove_pic {
-  background: #666666;
-  color: #ffffff;
+.profile_photo_button_container .remove_profile_pic {
+  background: rgba(0, 0, 0, 0.8);
+  width: 48px;
+  height: 24px;
+  border: none;
 }
 
 /************************************************************/
 .user_name_container, .user_birthday_container, .user_age_container, .user_sex_container, .user_address_container, .user_introduction_container {
   display: flex;
   flex-wrap: wrap;
-  flex-direction: row;
   justify-content: flex-start;
   align-items: center;
   width: 100%;
@@ -331,8 +308,6 @@
 
 .user_birthday_select_item {
   display: flex;
-  flex-wrap: nowrap;
-  flex-direction: row;
   justify-content: flex-start;
   align-items: center;
   margin-left: 10px;
@@ -344,8 +319,6 @@
 
 .user_birthday_select_item SELECT, .disclose_select_item SELECT, .user_sex_select_item SELECT, .user_address_select_item SELECT {
   display: flex;
-  flex-wrap: nowrap;
-  flex-direction: row;
   justify-content: flex-start;
   align-items: center;
   color: #3f3f3f;
@@ -361,14 +334,8 @@
 }
 
 /************************************************************/
-.user_age {
-
-}
-
 .disclose_select_item {
   display: flex;
-  flex-wrap: nowrap;
-  flex-direction: row;
   justify-content: flex-start;
   align-items: center;
   margin-left: 20px;
@@ -383,7 +350,6 @@
 .user_sex_select_item, .user_address_select_item, .user_certification_select_item {
   display: flex;
   flex-wrap: wrap;
-  flex-direction: row;
   justify-content: flex-start;
   align-items: center;
 }
@@ -391,7 +357,6 @@
 /************************************************************/
 .user_certification_container {
   display: flex;
-  flex-wrap: nowrap;
   flex-direction: column;
   justify-content: center;
   align-items: flex-start;
@@ -401,8 +366,6 @@
 
 .user_certification_select_item label {
   display: flex;
-  flex-wrap: nowrap;
-  flex-direction: row;
   justify-content: flex-start;
   align-items: center;
   margin-left: 16px;
@@ -416,7 +379,6 @@
 .user_introduction_select_item {
   display: flex;
   flex-wrap: wrap;
-  flex-direction: row;
   justify-content: flex-start;
   align-items: center;
   width: 100%;
@@ -433,8 +395,6 @@
 /************************************************************/
 .user_config_button_container {
   display: flex;
-  flex-wrap: nowrap;
-  flex-direction: row;
   justify-content: center;
   align-items: center;
   width: 100%;
