--- a/css/sake_library_search.css
+++ b/css/sake_library_search.css
@@ -1,27 +1,25 @@
 body {
-	background: #E8EAEC;
+  background: #E8EAEC;
 }
 
 #container {
-	display: flex;
-	flex-wrap: nowrap;
-	flex-direction: column;
-	justify-content: flex-start;
-	align-items: center;
-	width: 100%;
-	height: auto;
-	margin-top: 105px;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+  width: 100%;
+  height: auto;
+  margin-top: 105px;
 }
 
 #search_main_container {
   display: flex;
-	flex-wrap: nowrap;
-	flex-direction: column;
-	justify-content: flex-start;
-	align-items: center;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
   width: 1200px;
   max-width: 96%;
-	height: auto;
+  height: auto;
 }
 
 #hidden_form {
@@ -31,7 +29,6 @@ body {
 /************************************************************/
 #accordion {
   display: flex;
-  flex-wrap: nowrap;
   flex-direction: column;
   justify-content: center;
   align-items: center;
@@ -44,7 +41,6 @@ body {
 
 #accordion_frame {
   display: flex;
-  flex-wrap: nowrap;
   flex-direction: column;
   justify-content: flex-start;
   align-items: center;
@@ -53,8 +49,6 @@ body {
 
 #pc_search {
   display: none;
-  flex-wrap: nowrap;
-  flex-direction: row;
   justify-content: flex-start;
   align-items: center;
   background: #ffffff;
@@ -71,13 +65,12 @@ body {
 
 #pc_search p {
   color: #000000;
-	font-weight: bold;
+  font-weight: bold;
   font-size: 16px;
 }
 
 #tab_accordion {
   display: flex;
-  flex-wrap: nowrap;
   flex-direction: column;
   justify-content: center;
   align-items: center;
@@ -86,8 +79,6 @@ body {
 
 .simpleTabs {
   display: flex;
-  flex-wrap: nowrap;
-  flex-direction: row;
   justify-content: space-between;
   align-items: center;
   width: 100%;
@@ -97,8 +88,6 @@ body {
 
 .simpleTabs li {
   display: flex;
-  flex-wrap: nowrap;
-  flex-direction: row;
   justify-content: flex-start;
   align-items: center;
   overflow: hidden;
@@ -108,21 +97,17 @@ body {
 
 .simpleTabs li a {
   display: flex;
-  flex-wrap: nowrap;
-  flex-direction: row;
   justify-content: center;
   align-items: center;
   text-decoration: none;
   background: #F2F4F6;
   width: 100%;
   height: 40px;
-  border-top: 2px solid #E8EAEC;
+  border-top: 1px solid #E8EAEC;
 }
 
 .simpleTabs li a p {
   display: flex;
-  flex-wrap: nowrap;
-  flex-direction: row;
   justify-content: flex-start;
   align-items: baseline;
   color: #b2b2b2;
@@ -131,7 +116,7 @@ body {
 
 .simpleTabs li a.active {
   background: #E8EAEC;
-  border-top: 2px solid #009696;
+  border-top: 1px solid #009696;
 }
 
 .simpleTabs li a.active p {
@@ -141,8 +126,6 @@ body {
 
 .simpleTabs li a p span {
   display: none;
-  flex-wrap: nowrap;
-  flex-direction: row;
   justify-content: flex-start;
   align-items: center;
   font-size: 12px;
@@ -178,8 +161,6 @@ body {
 
 .mobilesake_container {
   display: flex;
-  flex-wrap: nowrap;
-  flex-direction: row;
   justify-content: center;
   align-items: center;
   width: 100%;
@@ -188,8 +169,6 @@ body {
 
 .mobilesake_content {
   display: flex;
-  flex-wrap: nowrap;
-  flex-direction: row;
   justify-content: space-between;
   align-items: center;
   width: 96%;
@@ -197,8 +176,6 @@ body {
 
 .sake_new_registry {
   display: flex;
-  flex-wrap: nowrap;
-  flex-direction: row;
   justify-content: flex-start;
   align-items: center;
   text-decoration: none;
@@ -222,8 +199,6 @@ body {
 
 #mobile_sake_searchplus, #mobile_brewery_searchplus {
   display: flex;
-  flex-wrap: nowrap;
-  flex-direction: row;
   justify-content: flex-start;
   align-items: center;
   height: 32px;
@@ -256,8 +231,6 @@ body {
 
 .accordion_tabs_title {
   display: flex;
-  flex-wrap: nowrap;
-  flex-direction: row;
   justify-content: flex-start;
   align-items: center;
   color: #000000;
@@ -276,8 +249,6 @@ body {
 
 .accordion_tabs_title p {
   display: flex;
-  flex-wrap: nowrap;
-  flex-direction: row;
   justify-content: flex-start;
   align-items: baseline;
   font-weight: bold;
@@ -285,8 +256,6 @@ body {
 
 .accordion_tabs_title span {
   display: flex;
-  flex-wrap: nowrap;
-  flex-direction: row;
   justify-content: flex-start;
   align-items: center;
   font-size: 12px;
@@ -295,7 +264,6 @@ body {
 
 #sake_sidebar_form, #sakagura_sidebar_form, #syuhanten_sidebar_form {
   display: flex;
-  flex-wrap: nowrap;
   flex-direction: column;
   justify-content: center;
   align-items: center;
@@ -305,8 +273,6 @@ body {
 
 .sake_option, .sakagura_option {
   display: flex;
-  flex-wrap: nowrap;
-  flex-direction: row;
   justify-content: flex-start;
   align-items: center;
   width: 100%;
@@ -321,7 +287,6 @@ body {
 
 .search_option_row_container {
   display: flex;
-  flex-wrap: nowrap;
   flex-direction: column;
   justify-content: center;
   align-items: center;
@@ -350,8 +315,6 @@ body {
 
 .sake_option SELECT, .search_option_row_text, .sakagura_option SELECT {
   display: flex;
-  flex-wrap: nowrap;
-  flex-direction: row;
   justify-content: flex-start;
   align-items: center;
   color: #3f3f3f;
@@ -374,7 +337,6 @@ body {
 
 .sake_option_seiho {
   display: flex;
-  flex-wrap: nowrap;
   flex-direction: column;
   justify-content: center;
   align-items: flex-start;
@@ -386,8 +348,6 @@ body {
 
 .sake_option_trigger {
   display: flex;
-  flex-wrap: nowrap;
-  flex-direction: row;
   justify-content: flex-start;
   align-items: center;
   width: 100%;
@@ -434,7 +394,6 @@ body {
 .dialog_sidebar {
   display: none;
   flex-wrap: wrap;
-  flex-direction: row;
   justify-content: flex-start;
   align-items: center;
   width:100%;
@@ -445,8 +404,6 @@ body {
 
 .dialog_sidebar ul li {
   display: flex;
-  flex-wrap: nowrap;
-  flex-direction: row;
   justify-content: flex-start;
   align-items: center;
   float: left;
@@ -461,8 +418,6 @@ body {
 /************************************************************/
 .mobile_accordion_button_container {
   display: flex;
-  flex-wrap: nowrap;
-  flex-direction: row;
   justify-content: center;
   align-items: center;
   width: 100%;
@@ -496,43 +451,11 @@ body {
 /************************************************************/
 #tab_main {
   display: flex;
-	flex-wrap: nowrap;
-	flex-direction: column;
-	justify-content: flex-start;
-	align-items: center;
-	width: 100%;
-	height: auto;
-}
-
-/* sakaguraspec */
-.sakaguraspec {
-		overflow:auto;
-		//clear:both;
-		left:4px;
-		min-height:18px;
-		width:auto;
-		font-size:9pt;
-		padding:2px;
-		border:1px dotted #c6c6c6;
-}
-
-.sakaguraspec > div {
-		overflow:hidden;
-		float:left;
-		font-size:11px;
-		min-width:58px;
-		max-width:168px;
-		height:20px;
-		border-right:1px solid #e3e3e3;
-		margin:2px;
-		padding:1px;
-}
-
-.seihou {
-		margin:auto 0px;
-		overflow:auto;
-		padding:1px;
-		border:0px solid #c3c3c3;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+  width: 100%;
+  height: auto;
 }
 
 #search_background {
@@ -578,30 +501,6 @@ body {
 	100% { transform: rotate(360deg); }
 }
 
-/*.complex {
-		border: 1px solid #e3e3e3;
-		box-shadow: 1px 1px 1px -1px rgba(0,0,0,.9);
-    margin-left: 12px;
-}*/
-
-/*#close_sake_sidebar {
-		float:right;
-		width:24px;
-		height:24px;
-		cusor:pointer;
-		border:1px solid #fff;
-}
-
-#close_sake_sidebar:hover {
-		border:1px solid #c6c6c6;
-}
-
-#close_sake_sidebar:active {
-		border:1px solid #404040;
-}*/
-
-
-
 /************************************************************/
 #tabs-all, #tabs-sake, #tabs-sakagura, #tabs-syuhanten {
   width: 100%;
@@ -626,10 +525,9 @@ body {
 
 .sake_view {
   display: flex;
-	flex-wrap: nowrap;
-	flex-direction: column;
-	justify-content: flex-start;
-	align-items: flex-start;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: flex-start;
   width: 100%;
   font-size: 12px;
   margin-bottom: 12px;
@@ -637,10 +535,9 @@ body {
 
 .search_result_keyword {
   display: flex;
-	flex-wrap: wrap;
-	flex-direction: row;
-	justify-content: flex-start;
-	align-items: center;
+  flex-wrap: wrap;
+  justify-content: flex-start;
+  align-items: center;
   line-height: 120%;
   width: 100%;
 }
@@ -648,15 +545,12 @@ body {
 .search_result_keyword_content {
   display: flex;
   flex-wrap: wrap;
-  flex-direction: row;
   justify-content: flex-start;
   align-items: center;
 }
 
 .search_result_keyword_content span {
   display: flex;
-  flex-wrap: nowrap;
-  flex-direction: row;
   justify-content: flex-start;
   align-items: center;
 }
@@ -671,7 +565,6 @@ body {
 .click_sort {
   display: flex;
   flex-wrap: wrap;
-  flex-direction: row;
   justify-content: flex-start;
   align-items: center;
   width: 100%;
@@ -681,7 +574,6 @@ body {
 .click_sort div:first-child {
   display: flex;
   flex-wrap: wrap;
-  flex-direction: row;
   justify-content: center;
   align-items: center;
   background: #ffffff;
@@ -716,7 +608,6 @@ body {
 .search_result_count {
   display: flex;
   flex-wrap: wrap;
-  flex-direction: row;
   justify-content: flex-start;
   align-items: center;
   color: #3f3f3f;
@@ -724,17 +615,6 @@ body {
   width: 100%;
   padding: 4px 0;
   margin: 8px;
-}
-
-.loading {
-  display: flex;
-	flex-wrap: wrap;
-	flex-direction: row;
-	justify-content: flex-start;
-	align-items: center;
-  color: #8c8c8c;
-  margin-left: auto;
-  visibility: hidden;
 }
 
 /************************************************************/
@@ -745,7 +625,6 @@ body {
 
 .searchRow_link, .sakaguraRow_link, .syuhantenRow_link  {
 	display: flex;
-  flex-wrap: nowrap;
   flex-direction: column;
   justify-content: flex-start;
   align-items: flex-start;
@@ -766,8 +645,6 @@ body {
 
 .search_result_name_container, .search_sakagura_result_name_container, .search_syuhanten_result_name_container {
   display: flex;
-  flex-wrap: nowrap;
-  flex-direction: row;
   justify-content: flex-start;
   align-items: flex-start;
   width: 100%;
@@ -799,7 +676,6 @@ body {
 
 .search_result_sake_brewery_date_container, .search_sakagura_result_brewery_pref_date_container, .search_syuhanten_result_store_pref_date_container {
   display: flex;
-  flex-wrap: nowrap;
   flex-direction: column;
   justify-content: flex-start;
   align-items: flex-start;
@@ -836,7 +712,6 @@ body {
 
 .search_result_button_container, .search_sakagura_result_button_container, .search_syuhanten_result_button_container {
   display: none;
-  flex-wrap: nowrap;
   flex-direction: column;
   justify-content: flex-start;
   align-items: flex-start;
@@ -847,8 +722,6 @@ body {
 
 .custom_button {
   display: flex;
-  flex-wrap: nowrap;
-  flex-direction: row;
   justify-content: center;
   align-items: center;
   background: linear-gradient(#e6e6e6, #ffffff);
@@ -931,8 +804,6 @@ body {
 /************************************************************/
 .spec, .sakagura_spec, .syuhanten_spec {
   display: flex;
-  flex-wrap: nowrap;
-  flex-direction: row;
   justify-content: flex-start;
   align-items: center;
   width: 100%;
@@ -943,7 +814,6 @@ body {
 
 .spec_item, .sakagura_spec_item, .syuhanten_spec_item {
   display: flex;
-  flex-wrap: nowrap;
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
@@ -970,8 +840,6 @@ body {
 
 .spec_title, .sakagura_spec_title, .syuhanten_spec_title {
   display: flex;
-  flex-wrap: nowrap;
-  flex-direction: row;
   justify-content: center;
   align-items: center;
   width: 100%;
@@ -995,46 +863,44 @@ body {
 /************************************************************/
 .search_result_turn_page {
   display: flex;
-  flex-wrap: nowrap;
-  flex-direction: row;
   justify-content: center;
   align-items: center;
   margin-top: 15px;
   font-size: 12px;
-  border: 1px solid #ff0000;
 }
 
 #prev_all, #next_all, #prev_sake, #next_sake, #prev_sakagura, #next_sakagura {
   display: flex;
-  flex-wrap: nowrap;
-  flex-direction: row;
   justify-content: center;
   align-items: center;
-  font-weight: bold;
   background: none;
   border: none;
   outline: none;
   margin: 0;
-  width: auto;
+  width: 24px;
   height: 24px;
-  border-bottom: 1px dotted #b2b2b2;
+  border-radius: 12px;
   cursor: pointer;
 }
 
 #prev_all, #prev_sake, #prev_sakagura {
-  margin-right: 4px;
-  color: #b2b2b2;
+  background: #b2b2b2;
+  margin-right: 8px;
 }
 
 #next_all, #next_sake, #next_sakagura {
-  margin-left: 4px;
-  color: #0740A5;
+  background: #22445B;
+  margin-left: 8px;
+}
+
+.prev_button_prev2020, .next_button_next2020 {
+  fill: #ffffff;
+  width: 14px;
+  height: 14px;
 }
 
 .pageitems {
   display: flex;
-  flex-wrap: nowrap;
-  flex-direction: row;
   justify-content: center;
   align-items: center;
   background: #b2b2b2;
